--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "magic": "webpack"
+    "magic": "webpack",
+    "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,8 @@
     "webpack": "^4.26.0"
   },
   "devDependencies": {
+    "tslint": "^5.11.0",
+    "tslint-react": "^3.6.0",
     "webpack-cli": "^3.1.2"
   }
 }
